--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
   </head>
   <body>
     
-    <header>
-     <div class="grid-container">
-        <div class="cell">
-            <a href="#">главная</a>
-            <img src="divider.png" alt="Divider">
-            <a href="#">посмотреть лоты</a>
-            <img src="divider.png" alt="Divider" class="grid-logo">
-            <a href="#">об аукционе</a>
-        </div>
-        <div class="cell">
-            <img src="logo.png" alt="Логотип">
-        </div>
-        <div class="cell">
-            <p class="contact-info">+9 999 555 5555</p>
-            <p class="contact-info">info@sobaka.ge</p>
-            <p class="contact-info">наб. Принсенграхт 263-265, Амстердам</p>
-        </div>
-    </div>
-  </header>
+    <header class="header">
+      <nav class="header_menu">
+        <div class="header_menu_list">
+          <p class="header_menu_item header_menu_active">
+            <a href="#0" class="header_menu_link">главная</a>
+            <a href="#0" class="header_menu_link">посмотреть лоты</a>
+            <a href="#0" class="header_menu_link">об аукционе</a>
+      </nav>
+
+      <a class="header_logo">
+        <img src="./images/logo-black.svg" alt="Оно тебе надо" class="header_logo_image" />
+      </a>
+      <div class="header_menu_list">
+        <span text-decoration: underline>+9 999 555 5555<br>info@sobaka.ge</span><br>наб. Принсенграхт 263-<br> 265, Амстердам
+      </div>  
+
+
+      
+    </header>
 
 
     <main>
@@ -48,7 +48,7 @@
     </main>
 
     <footer>
-    </footer>  
+    </footer>
 
   </body>
 </html>
