--- a/index.html
+++ b/index.html
@@ -12,23 +12,11 @@
   <body>
     
     <header class="header">
-      <nav class="header_menu">
-        <div class="header_menu_list">
-          <p class="header_menu_item header_menu_active">
-            <a href="#0" class="header_menu_link">главная</a>
-            <a href="#0" class="header_menu_link">посмотреть лоты</a>
-            <a href="#0" class="header_menu_link">об аукционе</a>
-      </nav>
-
-      <a class="header_logo">
-        <img src="./images/logo-black.svg" alt="Оно тебе надо" class="header_logo_image" />
-      </a>
-      <div class="header_menu_list">
-        <span text-decoration: underline>+9 999 555 5555<br>info@sobaka.ge</span><br>наб. Принсенграхт 263-<br> 265, Амстердам
-      </div>  
-
-
-      
+    <div class="container">
+    <div></div>
+    <img src="images/logo-black.svg" alt="Оно тебе надо" class="container_logo">
+    <div></div>
+  </div>
     </header>
 
 
