--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
     
     <header class="header">
     <div class="container">
-    <div></div>
+    <nav></nav>
     <img src="images/logo-black.svg" alt="Оно тебе надо" class="container_logo">
-    <div></div>
+    <address class='contacts'>
+      <p><a href="tel:+9 999 555 5555">+9 999 555 5555</a></p>
+      <p><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
+      <p>наб. Принсенграхт 263-<br>265, Амстердам</p>
+    </address>
+    
   </div>
     </header>
 
