--- a/index.html
+++ b/index.html
@@ -11,35 +11,30 @@
 </head>
 <body>
     <header class="header">
-    <nav class="header__menu">
+      <nav class="header__menu">
         <ul class="header__links-list">
-            <li class="header__links-list-item header__links-list-item_no-bullit">
-                <a href="#" class="header__link header__link_active">главная</a>
-            </li>
-            <li class="header__links-list-item">
-                <a href="#" class="header__link">посмотреть лоты</a>
-            </li>
-            <li class="header__links-list-item">
-                <a href="#" class="header__link">об аукционе</a>
-            </li>
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a href="#0" class="header__link header__link_active">главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a href="#0" class="header__link">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+                <a href="#0" class="header__link">об аукционе</a>
+          </li>
         </ul>
-    </nav>
-    <div class="header__logo">
+      </nav>
+      <div class="header__logo">
         <a href="#">
-            <img src="./images/logo-black.svg" alt="Логотип" class="header__logo-image" />
+          <img src="./images/logo-black.svg" alt="Логотип Оно тебе надо" class="header__logo-image" />
         </a>
-    </div>
-    <address class="address header__address">
-        <p>
-            <a href="tel:+99995555555" class="address__link">+9 999 555 5555</a>
-        </p>
-        <p>
-            <a href="mailto:info@sobaka.ge" class="address__link">info@sobaka.ge</a>
-        </p>
-        <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
-    </address>
-</header>
-
+      </div>
+      <address class="address header__address">
+        <p><a href="tel:+99995555555" class="contact-link">+9 999 555 5555</a></p>
+        <p><a href="mailto:info@sobaka.ge" class="contact-link">info@sobaka.ge</a></p>
+        <p>наб. Принсенграхт 263-<br>265, Амстердам</p>
+      </address>
+    </header>
     <main>
         <section class="cover">
             <div class="overlay"></div>
