--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         <section class="cover">
             <div class="overlay"></div>
             <h1 class="cover__title">
-                <span class="accent-span">
+                <span class="aligned-text">
                     О<span class="letter-spacing-60">но</span>
                 </span>
-                <span class="accent-span text-center">
+                <span class="aligned-text text-center">
                     те<span class="letter-spacing-60">бе</span>
                 </span>
-                <span class="accent-span text-right">
+                <span class="aligned-text text-right">
                     <span class="letter-spacing-60">н</span>ад<span class="letter-spacing-0">о</span>
                 </span>
             </h1>
