--- a/index.html
+++ b/index.html
@@ -40,22 +40,20 @@
             <div class="overlay"></div>
             <h1 class="cover__title">
                 <span class="aligned-text">
-                    О<span class="letter-spacing-60">но</span>
+                    О<span class="letter-spacing-extended">но</span>
                 </span>
-                <span class="aligned-text text-center">
-                    те<span class="letter-spacing-60">бе</span>
+                <span class="aligned-text aligned-text-center">
+                    те<span class="letter-spacing-extended">бе</span>
                 </span>
-                <span class="aligned-text text-right">
-                    <span class="letter-spacing-60">н</span>ад<span class="letter-spacing-0">о</span>
+                <span class="aligned-text aligned-text-right">
+                    <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
                 </span>
             </h1>
-            <div class="cover__cta">
-                <p class="cover__cta-title">
-                    Аукцион вещей, в которые
-                    <span class="letter-spacing--0_1">никто</span>
-                    <span class="letter-spacing--0_3">не верил</span>
+            <div class="cover__description">
+                <p class="cover__description-text">
+                    Аукцион вещей, в которые <span class="description-text-extended">никто не верил</span>
                 </p>
-                <button type="button" class="cover__cta-button">
+                <button type="button" class="bet-button">
                     Сделать ставку
                 </button>
             </div>
