--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             </h1>
             <div class="cover__description">
                 <p class="cover__description-text">
-                    Аукцион вещей, в которые <span class="description-text-extended">никто не верил</span>
+                    Аукцион вещей, в которые <span class="description-text-extended-1">никто</span>
+                    <span class="description-text-extended-2">не верил</span>
                 </p>
                 <button type="button" class="bet-button">
                     Сделать ставку
@@ -104,7 +105,7 @@
                             <p class="card__text">
                                 Ну действительно, там линия, тут кружочек, а здесь и вовсе
                                 что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                                котиков<span class="letter-spacing-2_6">...</span> Сколько бы
+                                котиков<span class="three_dots">...</span> Сколько бы
                                 вы на такое поставили, если бы не знали, что это — одна из
                                 революционных работ Кандинского?
                             </p>
@@ -112,7 +113,7 @@
                     </a>
                 </li>
             </ul>
-            <a href="#" class="lots__look-more-link">посмотреть больше</a>
+            <a href="#0" class="lots__look-more-link">посмотреть больше</a>
         </section>
         <section class="about">
             <div class="about__column">
