--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             </h3>
                             <p class="card__text">
                                 Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                                ставка, если бы вы не знали, что режиссёр — Пол Томас
+                                ставка, если бы вы не знали, что режиссёр &mdash; Пол Томас
                                 Андерсон?
                             </p>
                         </article>
@@ -105,8 +105,8 @@
                             <p class="card__text">
                                 Ну действительно, там линия, тут кружочек, а здесь и вовсе
                                 что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                                котиков<span class="three_dots">...</span> Сколько бы
-                                вы на такое поставили, если бы не знали, что это — одна из
+                                котиков <span class="three_dots">...</span> Сколько бы
+                                вы на такое поставили, если бы не знали, что это &mdash; одна из
                                 революционных работ Кандинского?
                             </p>
                         </article>
