--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h2 class="lots__heading">Лоты</h2>
             <ul class="lots__card-list">
                 <li class="lots__card-list-item">
-                    <a href="#" class="card-link">
+                    <a href="#0" class="card-link">
                         <article class="card card_type_film">
                             <div class="overlay"></div>
                             <h3 class="card__title">
@@ -78,7 +78,7 @@
                     </a>
                 </li>
                 <li class="lots__card-list-item">
-                    <a href="#" class="card-link">
+                    <a href="#0" class="card-link">
                         <article class="card card_type_book">
                             <div class="overlay"></div>
                             <h3 class="card__title">
@@ -96,7 +96,7 @@
                     </a>
                 </li>
                 <li class="lots__card-list-item">
-                    <a href="#" class="card-link">
+                    <a href="#0" class="card-link">
                         <article class="card card_type_picture">
                             <div class="overlay"></div>
                             <h3 class="card__title">
@@ -121,34 +121,39 @@
                     <img src="./images/logo-white.svg" alt="Логотип" class="about__logo-image" />
                 </div>
             </div>
-            <div class="about__column">
+            <div>
                 <h2 class="about__title">Об аукционе</h2>
                 <div class="about__text">
                     <p>
-                        Здесь вы не встретите очередное
-                        <span class="letter-spacing-0">пафосное собрание невероятно дорогого антиквариата</span>
-                        . Наши лоты вообще не должны
-                        <span class="letter-spacing--0_3">были попасть</span> ни
-                        <span class="letter-spacing-0">на один аукцион. Потому что кому нужен</span>
-                        <span class="letter-spacing-0_4">дневник девочки-</span>
-                        <span class="letter-spacing-0">подростка или картина, которую может</span>
-                        нарисовать даже ребёнок? Кому
-                        <span class="letter-spacing-0_1">нужны все эти странные вещи, созданные любителями?</span>
+                      Здесь вы не встретите очередное
+                      <span class="no-letter-spacing">пафосное собрание невероятно дорогого антиквариата</span>.
+                      Наши лоты вообще не должны
+                      <span class="letter-spacing-0--3">были попасть</span> ни
+                      <span class="no-letter-spacing">на один аукцион. Потому что кому нужен</span>
+                      <span class="letter-spacing-0-6">дневник</span>
+                      <span class="letter-spacing-0-4">девочки-</span>
+                      <span class="no-letter-spacing">подростка или картина, которую может</span>
+                      нарисовать 
+                      <span class="no-letter-spacing">даже ребёнок?</span> Кому
+                      <span class="letter-spacing-0-1">нужны все эти странные вещи, созданные любителями?</span>
                     </p>
                     <p>
-                        <span class="letter-spacing-0">Слишком сложные или, наоборот, слишком простые. Опережающие</span>
-                        своё время. В пух и прах растерзанные критиками. Непринятые и
-                        непонятые. Когда-то
-                        <span class="letter-spacing--0_1">они казались просто</span>
-                        <span class="letter-spacing-0">неудачными. Но, несмотря<br /></span>
-                        на критику,
-                        <span class="letter-spacing--0_1">кажущуюся простоту или сложность, сейчас без</span>
-                        <span class="letter-spacing-0">этих лотов</span> невозможно
-                        <span class="letter-spacing-0">представить современную</span>
-                        культуру. Когда в эти вещи не верил никто,
-                        <span class="letter-spacing--0_1">продолжали верить их создатели</span>
-                        ли. И сейчас эти лоты стали
-                        <span class="letter-spacing-0">культовыми</span>.
+                      <span class="no-letter-spacing">Слишком сложные или, наоборот, слишком простые. Опережающие</span>
+                      своё время. 
+                      <span class="letter-spacing-0--1">В пух и прах растерзанные критиками.</span> 
+                      <span class="no-letter-spacing">Непринятые</span> 
+                      и непонятые. 
+                      <span class="no-letter-spacing">Когда-то они казались просто неудачными.</span> 
+                      <span class="letter-spacing-0-1">Но, несмотря<br></span>
+                      на критику,
+                      <span class="letter-spacing-0--1">кажущуюся простоту или сложность, сейчас</span>
+                      <span class="letter-spacing-0-3">без этих лотов</span> невозможно
+                      <span class="no-letter-spacing">представить современную</span>
+                      <span class="letter-spacing-0-6">культуру.</span> Когда 
+                      <span class="letter-spacing-0--1">в эти вещи не верил никто,</span> 
+                      <span class="letter-spacing-0-1">продолжали верить их создатели.</span>
+                      <span class="letter-spacing-0-1">И сейчас эти лоты стали</span>
+                      <span class="no-letter-spacing">культовыми</span>.
                     </p>
                 </div>
             </div>
