--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <a href="#0" class="header__link header__link_active">главная</a>
           </li>
           <li class="header__links-list-item">
-            <a href="#0" class="header__link">посмотреть лоты</a>
+            <a href="#0" class="header__link underline">посмотреть лоты</a>
           </li>
           <li class="header__links-list-item">
-                <a href="#0" class="header__link">об аукционе</a>
+                <a href="#0" class="header__link underline">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -30,11 +30,12 @@
         </a>
       </div>
       <address class="address header__address">
-        <p><a href="tel:+99995555555" class="contact-link">+9 999 555 5555</a></p>
-        <p><a href="mailto:info@sobaka.ge" class="contact-link">info@sobaka.ge</a></p>
+        <p><a href="tel:+99995555555" class="contact-link underline">+9 999 555 5555</a></p>
+        <p><a href="mailto:info@sobaka.ge" class="contact-link underline">info@sobaka.ge</a></p>
         <p>наб. Принсенграхт 263-<br>265, Амстердам</p>
       </address>
     </header>
+
     <main>
         <section class="cover">
             <div class="overlay"></div>
@@ -116,7 +117,7 @@
             <a href="#0" class="lots__look-more-link">посмотреть больше</a>
         </section>
         <section class="about">
-            <div class="about__column">
+            <div>
                 <div class="about__logo">
                     <img src="./images/logo-white.svg" alt="Логотип" class="about__logo-image" />
                 </div>
@@ -134,8 +135,7 @@
                       <span class="letter-spacing-0-4">девочки-</span>
                       <span class="no-letter-spacing">подростка или картина, которую может</span>
                       нарисовать 
-                      <span class="no-letter-spacing">даже ребёнок?</span> Кому
-                      <span class="letter-spacing-0-1">нужны все эти странные вещи, созданные любителями?</span>
+                      <span class="letter-spacing-0-1">даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</span>
                     </p>
                     <p>
                       <span class="no-letter-spacing">Слишком сложные или, наоборот, слишком простые. Опережающие</span>
@@ -158,48 +158,42 @@
                 </div>
             </div>
         </section>
+
     </main>
     <footer class="footer">
-        <address class="address">
-            <p>
-                <a href="tel:+99995555555" class="address__link">+9 999 555 5555</a>
-            </p>
-            <p>
-                <a href="mailto:info@sobaka.ge" class="address__link">info@sobaka.ge</a>
-            </p>
-            <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
-        </address>
-        <nav class="footer__menu">
-            <ul class="footer__menu-list">
-                <li class="footer__menu-list-item">
-                    <a href="#" class="footer__menu-link footer__menu-link_active">главная</a>
-                </li>
-                <li class="footer__menu-list-item">
-                    <a href="#" class="footer__menu-link">посмотреть лоты</a>
-                </li>
-                <li class="footer__menu-list-item">
-                    <a href="#" class="footer__menu-link">об аукционе</a>
-                </li>
-            </ul>
-        </nav>
-        <ul class="footer__social-list">
-            <li class="footer__social-list-item">
-                <a href="#" class="footer__social-link">
-                    <img src="./images/yt.svg" width="48" alt="Ссылка на канал Youtube" class="footer__social-icon" />
-                </a>
-            </li>
-            <li class="footer__social-list-item">
-                <a href="#" class="footer__social-link">
-                    <img src="./images/vk.svg" width="48" alt="Ссылка на канал в VK" class="footer__social-icon" />
-                </a>
-            </li>
-            <li class="footer__social-list-item">
-                <a href="#" class="footer__social-link">
-                    <img src="./images/pinterest.svg" width="48" alt="Ссылка на Pinterest" class="footer__social-icon" />
-                </a>
-            </li>
+    <address class="address header__address">
+        <p><a href="tel:+99995555555" class="contact-link underline">+9 999 555 5555</a></p>
+        <p><a href="mailto:info@sobaka.ge" class="contact-link underline">info@sobaka.ge</a></p>
+        <p>наб. Принсенграхт 263-<br>265, Амстердам</p>
+      </address>
+    
+    <nav class="footer__menu">
+        <ul class="footer__menu-list header__links-list-item_no-bullit">
+            <li class="footer__menu-list-item footer__menu-link_active"><a href="#0">главная</a></li>
+            <li class="footer__menu-list-item "><a href="#0">посмотреть лоты</a></li>
+            <li class="footer__menu-list-item"><a href="#0">об аукционе</a></li>
         </ul>
-    </footer>
+    </nav>
+    
+    <ul class="footer__social-list">
+        <li>
+            <a href="#0">
+                <img src="images/yt.svg" alt="ютуб" class="footer__social-icon">
+            </a>
+        </li>
+        <li>
+            <a href="#0">
+                <img src="images/vk.svg" alt="вконтакте" class="footer__social-icon">
+            </a>
+        </li>
+        <li>
+            <a href="#0">
+                <img src="images/pinterest.svg" alt="пинтерест" class="footer__social-icon">
+            </a>
+        </li>
+    </ul>
+</footer>
+
 </body>
 </html>
 
